--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,6 +28,17 @@ header{
   display:flex;
  }
 
+ .header-right{
+  float:right;
+  margin-top: 10px;
+  margin-right:10px;
+  list-style:none;
+}
+
+.header-right li{
+  float:right;
+}
+
 .logo{
   text-decoration: none;
   color:white;
@@ -46,4 +57,72 @@ footer h2{
 
 .footer-right{
   text-align:right;
+}
+
+.login-container{
+  height:650px;
+}
+
+.form{
+  max-width: 600px;
+  border:solid 1px lightgrey;
+  box-shadow: 5px 5px lightgray;
+  border-radius: 10px;
+  text-align: center;
+  padding:20px 0;
+  margin:150px auto;
+}
+
+.btn{
+  margin:10px;
+}
+
+.signup-link{
+  text-decoration: none;
+  background-color:dodgerblue;
+  color:white;
+  border-radius: 5px;
+  padding:10px;
+}
+
+.login-link{
+  text-decoration: none;
+  background-color:gray;
+  color:white;
+  border-radius: 5px;
+  padding:10px;
+  margin:30px;
+  
+}
+
+.login-container{
+  height:650px;
+}
+
+.form{
+  max-width: 600px;
+  border:solid 1px lightgrey;
+  box-shadow: 5px 5px lightgray;
+  border-radius: 10px;
+  text-align: center;
+  padding:20px 0;
+  margin:150px auto;
+}
+
+.btn{
+  text-decoration: none;
+  background-color:dodgerblue;
+  border: none;
+  color:white;
+  padding:10px;
+  border-radius: 5px;
+  margin:20px;
+  width:75%;
+}
+
+.input{
+  width:75%;
+  height:30px;
+  margin:10px;
+  border:solid 1px lightgrey;
 }
