新規登録、ログインフォームへのリンク先修正

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -30,5 +30,5 @@
       <%= f.submit "新規登録", class: "btn" %>
     </div>
   <% end %>
-  <a href = "/users/sign_up">ログインはこちら</a>
+  <a href = "/users/sign_in">ログインはこちら</a>
 </div>
