--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -139,3 +139,68 @@ footer h2{
   border-radius:50%;
   margin-right: 10px;
 }
+
+.nav_toggle {
+  display: block;
+  position: relative;
+  width: 1.75rem;
+  height: 1.5rem;
+  margin-top: 10px;
+}
+.nav_toggle i {
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: #333;
+  position: absolute;
+  transition: transform .5s, opacity .5s;
+}
+.nav_toggle i:nth-child(1) {
+  top: 0;
+}
+.nav_toggle i:nth-child(2) {
+  top: 0;
+  bottom: 0;
+  margin: auto;
+}
+.nav_toggle i:nth-child(3) {
+  bottom: 0;
+}
+
+.nav_toggle.show i:nth-child(1) {
+  transform: translateY(10px) rotate(-45deg);
+}
+.nav_toggle.show i:nth-child(2) {
+  opacity: 0;
+}
+.nav_toggle.show i:nth-child(3) {
+  transform: translateY(-12px) rotate(45deg);
+}
+
+.nav {
+  position: fixed;
+  background-color: black;
+  top: 65px;
+  left: 75%;
+  right: 0;
+  bottom: 65px;
+  padding: 1rem;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity .5s, visibility .5s;
+}
+.nav.show {
+  opacity: 1;
+  visibility: visible;
+  z-index: 1;
+}
+.nav_menu_li{
+  list-style:none;
+  width:100%;
+  margin:10px;
+}
+
+.nav_menu_li a{
+  text-decoration: none;
+  color:white;
+}
