--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,17 @@
     <ul class = header-right>
       <% if current_user %>
         <li>
-          <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+          <span class = "nav_toggle">
+            <i></i>
+            <i></i>
+            <i></i>
+          </span>
+          <nav class = "nav">
+            <ul class = "nav_menu_ul">
+              <li class = "nav_menu_li"><a href = <%= "/users/#{current_user.id}/edit"%> >プロフィール編集</a></li>
+              <li class = "nav_menu_li"><a href = "/users/sign_out">ログアウト</a></li>
+            </ul>
+          </nav>
         </li>
         <li class = "user-name">
           <%= current_user.name%>
