--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,7 @@
+.profile-container{
+  height:650px;
+}
+
 .profile-form{
   max-width: 600px;
   border:solid 1px lightgrey;
@@ -47,3 +51,17 @@
   width:90%;
 }
 
+.profile-image{
+  height:100px;
+  width:100px;
+  border-radius:50%;
+  margin-right: 10px;
+}
+
+.end{
+  padding-bottom:20px;
+}
+
+.update-content p{
+  color:gray;
+}
