新規登録画面にメンバー入力追加

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -65,3 +65,14 @@
 .update-content p{
   color:gray;
 }
+
+.schedule{
+  white-space:nowrap;
+}
+
+.input-area{
+  width:75%;
+  height:60px;
+  margin:10px;
+  border:solid 1px lightgrey;
+}
