--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -7,6 +7,11 @@
       <%= f.label :バンド名 %><br />
       <%= f.text_field :name, autofocus: true, class: "input" %>
     </div>
+
+    <div class="field">
+      <%= f.label :メンバー %><br />
+      <%= f.text_area :member, class: "input-area" %>
+    </div>
     
     <div class="field">
       <%= f.label :email %><br />
