--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,7 +19,9 @@
               <li class = "nav_menu_li"><a href = <%= "/users/#{current_user.id}/edit"%> >プロフィール編集</a></li>
               <li class = "nav_menu_li"><a href = <%= "/users/#{current_user.id}/entry"%> >スタジオ抽選</a></li>
               <li class = "nav_menu_li"><a href = <%= "/studios"%> >応募状況</a></li>
-              <li class = "nav_menu_li"><a href = <%= "/studios/election"%> >抽選結果</a></li>
+              <% if current_user.admin == true or current_user.open == true %>
+                <li class = "nav_menu_li"><a href = <%= "/studios/election"%> >抽選結果</a></li>
+              <% end %>
               <li class = "nav_menu_li"><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
             </ul>
           </nav>
