--- a/app/views/studios/election.html.erb
+++ b/app/views/studios/election.html.erb
@@ -76,6 +76,6 @@
   <div class = btn-container>
     <%= link_to "公表", studios_open_path, class: "lottery-btn" %>
     <%= link_to "非公表", studios_close_path, class: "lottery-btn close" %>
-    <%= link_to "リセット", studios_destroy_path, class: "reset-btn" %>
+    <%= link_to "リセット", studios_destroy_path, class: "reset-btn", data: {confirm:"リセットしますか？"} %>
   </div>
 <% end %>
