--- a/app/views/studios/election.html.erb
+++ b/app/views/studios/election.html.erb
@@ -18,7 +18,9 @@
         <td>
           <% studio.studio_users.sort_by{|id| id}.each_with_index do |user, i| %>
             <div class = "band">
-              <a href = <%= "/users/#{user.user.id}/show"%> class = "band-name <%= "election" if i == 0 %>"><%= user.user.name %></a>
+              <div class = "band-name <%= "election" if i == 0 %>">
+                <a href = <%= "/users/#{user.user.id}/show"%>><%= user.user.name %></a>
+              </div>
             </div>
           <% end %>
         </td>
@@ -30,7 +32,9 @@
         <td>
           <% studio.studio_users.sort_by{|id| id}.each_with_index do |user, i| %>
             <div class = "band">
-              <a href = <%= "/users/#{user.user.id}/show"%> class = "band-name <%= "election" if i == 0 %>"><%= user.user.name %></a>
+              <div class = "band-name <%= "election" if i == 0 %>">
+                <a href = <%= "/users/#{user.user.id}/show"%>><%= user.user.name %></a>
+              </div>
             </div>
           <% end %>
         </td>
@@ -42,7 +46,9 @@
         <td>
           <% studio.studio_users.sort_by{|id| id}.each_with_index do |user, i| %>
             <div class = "band">
-              <a href = <%= "/users/#{user.user.id}/show"%> class = "band-name <%= "election" if i == 0 %>"><%= user.user.name %></a>
+              <div class = "band-name <%= "election" if i == 0 %>">
+                <a href = <%= "/users/#{user.user.id}/show"%>><%= user.user.name %></a>
+              </div>
             </div>
           <% end %>
         </td>
@@ -54,7 +60,9 @@
         <td>
           <% studio.studio_users.sort_by{|id| id}.each_with_index do |user, i| %>
             <div class = "band">
-              <a href = <%= "/users/#{user.user.id}/show"%> class = "band-name <%= "election" if i == 0 %>"><%= user.user.name %></a>
+              <div class = "band-name <%= "election" if i == 0 %>">
+                <a href = <%= "/users/#{user.user.id}/show"%>><%= user.user.name %></a>
+              </div>
             </div>
           <% end %>
         </td>
@@ -66,7 +74,9 @@
         <td>
           <% studio.studio_users.sort_by{|id| id}.each_with_index do |user, i| %>
             <div class = "band">
-              <a href = <%= "/users/#{user.user.id}/show"%> class = "band-name <%= "election" if i == 0 %>"><%= user.user.name %></a>
+              <div class = "band-name <%= "election" if i == 0 %>">
+                <a href = <%= "/users/#{user.user.id}/show"%>><%= user.user.name %></a>
+              </div>
             </div>
           <% end %>
         </td>
