--- a/app/views/studios/index.html.erb
+++ b/app/views/studios/index.html.erb
@@ -16,7 +16,9 @@
       <td>
         <% studio.studio_users.each do |user| %>
           <div class = "band">
-            <a href = <%= "/users/#{user.user.id}/show"%> class = "band-name"><%= user.user.name %></a>
+            <div class = "band-name">
+              <a href = <%= "/users/#{user.user.id}/show"%> ><%= user.user.name %></a>
+            </div>
           </div>
         <% end %>
       </td>
@@ -28,7 +30,9 @@
       <td>
         <% studio.studio_users.each do |user| %>
           <div class = "band">
-            <a href = <%= "/users/#{user.user.id}/show"%> class = "band-name"><%= user.user.name %></a>
+            <div class = "band-name">
+              <a href = <%= "/users/#{user.user.id}/show"%> ><%= user.user.name %></a>
+            </div>
           </div>
         <% end %>
       </td>
@@ -40,7 +44,9 @@
       <td>
         <% studio.studio_users.each do |user| %>
           <div class = "band">
-            <a href = <%= "/users/#{user.user.id}/show"%> class = "band-name"><%= user.user.name %></a>
+            <div class = "band-name">
+              <a href = <%= "/users/#{user.user.id}/show"%> ><%= user.user.name %></a>
+            </div>
           </div>
         <% end %>
       </td>
@@ -52,7 +58,9 @@
       <td>
         <% studio.studio_users.each do |user| %>
           <div class = "band">
-            <a href = <%= "/users/#{user.user.id}/show"%> class = "band-name"><%= user.user.name %></a>
+            <div class = "band-name">
+              <a href = <%= "/users/#{user.user.id}/show"%> ><%= user.user.name %></a>
+            </div>
           </div>
         <% end %>
       </td>
@@ -64,7 +72,9 @@
       <td>
         <% studio.studio_users.each do |user| %>
           <div class = "band">
-            <a href = <%= "/users/#{user.user.id}/show"%> class = "band-name"><%= user.user.name %></a>
+            <div class = "band-name">
+              <a href = <%= "/users/#{user.user.id}/show"%> ><%= user.user.name %></a>
+            </div>
           </div>
         <% end %>
       </td>
