--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,12 @@
 <div class = main-container>
-  
+  <p class = "title">~使い方~</p>
+  <div class = "explanation-box">
+    <p class = "headline">1.メニューからスタジオ抽選を選択</p>
+  </div>
+  <div class = "explanation-box">
+    <p class = "headline">2.希望時間をチェックして、応募をクリック</p>
+  </div>
+  <div class = "explanation-box">
+    <p class = "headline">3.締め切り後、メニューから抽選結果を選択（締め切りまでは表示されません）</p>
+  </div>
 </div>
