--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,11 +1,5 @@
-// Place all the styles related to the home controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
-.main-container{
-  background-image: url(https://lh3.googleusercontent.com/pw/AL9nZEV13pnjguXE3nZ6xQ5QYChjjc-SHTt4nRj80cHzqNRMfy1vXTW3JtSHenENOFJTonhhAQskikPgPztGqdhf3WQo-OUUGxFZD9qHmkqjzS2cvActFgTikiTkZhKr3B7bKBrIv2ftpiAOj8WvjyXlt4bAwQ=w2376-h1578-no);
-  background-size: cover;
-  background-position: center;
-  width: 100%;
-  height: 650px;
-  position:relative;
+.title{
+  text-align: center;
+  font-size: 30px;
+  font-family: "Comic Sans MS";
 }
