--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,6 +12,7 @@
             <li class = "menu"><a href = <%= "/users/#{current_user.id}/entry"%> >スタジオ抽選</a></li>
             <li class = "menu"><a href = <%= "/studios"%> >応募状況</a></li>
           <% end %>
+          <li class = "menu"><a href = "/talk_rooms">DM</a></li>
           <% if current_user.admin == true or current_user.open == true %>
             <li class = "menu"><a href = <%= "/studios/election"%> >抽選結果</a></li>
           <% end %>
@@ -35,6 +36,7 @@
                 <li class = "nav_menu_li"><a href = <%= "/users/#{current_user.id}/entry"%> >スタジオ抽選</a></li>
                 <li class = "nav_menu_li"><a href = <%= "/studios"%> >応募状況</a></li>
               <% end %>
+              <li class = "menu"><a href = "/talk_rooms">DM</a></li>
               <% if current_user.admin == true or current_user.open == true %>
                 <li class = "nav_menu_li"><a href = <%= "/studios/election"%> >抽選結果</a></li>
               <% end %>
