使い方ページを更新

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -3,3 +3,14 @@
   font-size: 30px;
   font-family: "Comic Sans MS";
 }
+
+.pink{
+  background-color:#FF5192 ;
+  color:white;
+  padding:5px;
+  border-radius: 5px;
+}
+
+.red{
+  color:red;
+}
