--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -212,6 +212,10 @@ footer h2{
   color: white;
 }
 
+.main-container{
+  height:650px;
+}
+
 @media screen and (max-width:1080px){
   .menu{
     display:none;
