--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -49,7 +49,7 @@
         </li>
         <li>
           <% if current_user.image.nil? %>
-            <img class = "icon-image" alt = "デフォルトアイコン" src = "https://presite-potepancamp-rails-02.herokuapp.com/assets/default_icon-9263fc59c414b7228d256fc178dcb22183561357950a68f5ad086ba7ee054974.jpg">
+            <img class = "icon-image" alt = "デフォルトアイコン" src = "https://knsoza1.com/wp-content/uploads/2020/07/70b3dd52350bf605f1bb4078ef79c9b9.png">
           <% else %>
             <img class = "icon-image" alt = "アイコン" src = "<%= "/user_images/#{current_user.image}" %>">
           <% end %>
