--- a/app/views/talk_rooms/show.html.erb
+++ b/app/views/talk_rooms/show.html.erb
@@ -10,7 +10,7 @@
            <div class="chat-text">
             <div class = "chat-name-bar">
               <% if m.user.image.nil? %>
-                <img class = "chat-icon-image" alt = "デフォルトアイコン" src = "https://presite-potepancamp-rails-02.herokuapp.com/assets/default_icon-9263fc59c414b7228d256fc178dcb22183561357950a68f5ad086ba7ee054974.jpg">
+                <img class = "chat-icon-image" alt = "デフォルトアイコン" src = "https://knsoza1.com/wp-content/uploads/2020/07/70b3dd52350bf605f1bb4078ef79c9b9.png">
               <% else %>
                 <img class = "chat-icon-image" alt = "アイコン" src = "<%= "/user_images/#{m.user.image}" %>">
               <% end %>
