--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -4,22 +4,22 @@
     <%= render "devise/shared/error_messages", resource: resource %>
 
     <div class="field">
-      <%= f.label :バンド名 %><br />
+      <%= f.label :name, "バンド名" %><br />
       <%= f.text_field :name, autofocus: true, class: "input" %>
     </div>
 
     <div class="field">
-      <%= f.label :メンバー %><br />
+      <%= f.label :member, "メンバー" %><br/>
       <%= f.text_area :member, class: "input-area" %>
     </div>
     
     <div class="field">
-      <%= f.label :email %><br />
+      <%= f.label :email, "メールアドレス" %><br/>
       <%= f.email_field :email, autocomplete: "email", class: "input" %>
     </div>
 
     <div class="field">
-      <%= f.label :password %>
+      <%= f.label :password, "パスワード" %>
       <% if @minimum_password_length %>
       <em><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></em>
       <% end %><br />
