--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<div class = profile-container>
+<div class = "profile-container" >
   <div class = "profile-form">
     <div class = "update-content">
       <h2>プロフィール</h2>
