--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header>
-  <div class = header-container>
-    <div class = header-left>
-      <a href = "/" class = logo>
+  <div class = "header-container" >
+    <div class = "header-left" >
+      <a href = "/" class = "logo" >
         <h2><i>studio schedule</i></h2>
       </a>
       <% if current_user %>
