スケジュール表の各時間にクラスを追加

--- a/app/views/studios/election.html.erb
+++ b/app/views/studios/election.html.erb
@@ -14,8 +14,8 @@
     </tr>
     <tr>
       <th>月</th>
-      <% @studios[0..7].each do |studio| %>
-        <td>
+      <% @studios[0..7].each_with_index do |studio, i| %>
+        <td class = "mon<%= i %>">
           <% studio.studio_users.sort_by{|id| id}.each_with_index do |user, i| %>
             <div class = "band">
               <div class = "band-name <%= "election" if i == 0 %>">
@@ -28,8 +28,8 @@
     </tr>
     <tr>
       <th>火</th>
-      <% @studios[8..15].each do |studio| %>
-        <td>
+      <% @studios[8..15].each_with_index do |studio, i| %>
+        <td class = "tue<%= i %>">
           <% studio.studio_users.sort_by{|id| id}.each_with_index do |user, i| %>
             <div class = "band">
               <div class = "band-name <%= "election" if i == 0 %>">
@@ -42,8 +42,8 @@
     </tr>
     <tr>
       <th>水</th>
-      <% @studios[16..23].each do |studio| %>
-        <td>
+      <% @studios[16..23].each_with_index do |studio, i| %>
+        <td class = "wed<%= i %>">
           <% studio.studio_users.sort_by{|id| id}.each_with_index do |user, i| %>
             <div class = "band">
               <div class = "band-name <%= "election" if i == 0 %>">
@@ -56,8 +56,8 @@
     </tr>
     <tr>
       <th>木</th>
-      <% @studios[24..31].each do |studio| %>
-        <td>
+      <% @studios[24..31].each_with_index do |studio, i| %>
+        <td class = "thu<%= i %>">
           <% studio.studio_users.sort_by{|id| id}.each_with_index do |user, i| %>
             <div class = "band">
               <div class = "band-name <%= "election" if i == 0 %>">
@@ -70,8 +70,8 @@
     </tr>
     <tr>
       <th>金</th>
-      <% @studios[32..39].each do |studio| %>
-        <td>
+      <% @studios[32..39].each_with_index do |studio, i| %>
+        <td class = "fri<%= i %>">
           <% studio.studio_users.sort_by{|id| id}.each_with_index do |user, i| %>
             <div class = "band">
               <div class = "band-name <%= "election" if i == 0 %>">
