--- a/app/views/studios/index.html.erb
+++ b/app/views/studios/index.html.erb
@@ -12,8 +12,8 @@
   </tr>
   <tr>
     <th>月</th>
-    <% @studios[0..7].each do |studio| %>
-      <td>
+    <% @studios[0..7].each_with_index do |studio, i| %>
+      <td class = "mon<%= i %>">
         <% studio.studio_users.each do |user| %>
           <div class = "band">
             <div class = "band-name">
@@ -26,8 +26,8 @@
   </tr>
   <tr>
     <th>火</th>
-    <% @studios[8..15].each do |studio| %>
-      <td>
+    <% @studios[8..15].each_with_index do |studio, i| %>
+      <td class = "tue<%= i %>">
         <% studio.studio_users.each do |user| %>
           <div class = "band">
             <div class = "band-name">
@@ -40,8 +40,8 @@
   </tr>
   <tr>
     <th>水</th>
-    <% @studios[16..23].each do |studio| %>
-      <td>
+    <% @studios[16..23].each_with_index do |studio, i| %>
+      <td class = "wed<%= i %>">
         <% studio.studio_users.each do |user| %>
           <div class = "band">
             <div class = "band-name">
@@ -54,8 +54,8 @@
   </tr>
   <tr>
     <th>木</th>
-    <% @studios[24..31].each do |studio| %>
-      <td>
+    <% @studios[24..31].each_with_index do |studio, i| %>
+      <td class = "thu<%= i %>">
         <% studio.studio_users.each do |user| %>
           <div class = "band">
             <div class = "band-name">
@@ -68,8 +68,8 @@
   </tr>
   <tr>
     <th>金</th>
-    <% @studios[32..39].each do |studio| %>
-      <td>
+    <% @studios[32..39].each_with_index do |studio, i| %>
+      <td class = "fri<%= i %>">
         <% studio.studio_users.each do |user| %>
           <div class = "band">
             <div class = "band-name">
