--- a/app/views/studios/election.html.erb
+++ b/app/views/studios/election.html.erb
@@ -16,8 +16,8 @@
       <th>月</th>
       <% @studios[0..7].each_with_index do |studio, i| %>
         <td class = "mon<%= i %>">
-          <% studio.studio_users.sort_by{|x| -x.id.to_i}.each_with_index do |band, i| %>
-            <div class = "band">
+          <% studio.studio_users.sort_by{|x| -x.lottely}.each_with_index do |band, i| %>
+            <div class = "band band<%= i %>">
               <div class = "band-name <%= "election" if i == 0 %>">
                 <a href = <%= "/users/#{band.user.id}/show"%>><%= band.user.name %></a>
               </div>
