--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
         <ul>
           <li class = "menu"><a href = <%= "/users/#{current_user.id}/show"%> >プロフィール</a></li>
           <li class = "menu"><a href = <%= "/users/#{current_user.id}/edit"%> >プロフィール編集</a></li>
-          <% if current_user.open == false %>
+          <% if current_user.admin == true or current_user.open == false %>
             <li class = "menu"><a href = <%= "/users/#{current_user.id}/entry"%> >スタジオ抽選</a></li>
             <li class = "menu"><a href = <%= "/studios"%> >応募状況</a></li>
           <% end %>
@@ -32,7 +32,7 @@
             <ul class = "nav_menu_ul">
               <li class = "nav_menu_li"><a href = <%= "/users/#{current_user.id}/show"%> >プロフィール</a></li>
               <li class = "nav_menu_li"><a href = <%= "/users/#{current_user.id}/edit"%> >プロフィール編集</a></li>
-              <% if current_user.open == false %>
+              <% if current_user.admin == true or current_user.open == false %>
                 <li class = "nav_menu_li"><a href = <%= "/users/#{current_user.id}/entry"%> >スタジオ抽選</a></li>
                 <li class = "nav_menu_li"><a href = <%= "/studios"%> >応募状況</a></li>
               <% end %>
