メッセージの表示順を最新が上に来るように修正

--- a/app/views/talk_rooms/show.html.erb
+++ b/app/views/talk_rooms/show.html.erb
@@ -5,7 +5,7 @@
  <div class="chats">
    <div class="chat">
      <% if @messages.present? %>
-       <% @messages.each do |m| %>
+       <% @messages.sort_by{|x| -x.id}.each do |m| %>
          <div class="chat-box">
            <div class="chat-text">
             <div class = "chat-name-bar">
