応募画面の文言表示の表示の真偽反転、それに伴うテスト修正

--- a/app/views/users/entry.html.erb
+++ b/app/views/users/entry.html.erb
@@ -1,5 +1,5 @@
 <div class = "profile-form">
-  <% if @user.open == false %>
+  <% if @user.open == true %>
     <p>次回抽選までお待ちください</p>
   <% else %>
     <div class = "update-content">
