--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -73,3 +73,18 @@
   border:solid 1px lightgrey;
 }
 
+.dm-btn{
+  height: 50px;
+  position: relative;
+}
+
+.dm-btn a{
+  background-color: dodgerblue;
+  text-decoration: none;
+  color: white;
+  padding: 10px 100px;
+  border-radius: 5px;
+  position: absolute;
+  top: 5%;
+
+}
