--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -176,15 +176,17 @@ footer h2{
 .nav {
   position: fixed;
   background-color: black;
-  top: 65px;
+  top: 0;
   left: 75%;
   right: 0;
+  height: 100%;
   bottom: 65px;
   padding: 1rem;
   opacity: 0;
   visibility: hidden;
   transition: opacity .5s, visibility .5s;
 }
+
 .nav.show {
   opacity: 1;
   visibility: visible;
